# s21notify

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  run.py  s21notify.service  start-windows.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
crates/s21-adapters/: Cargo.toml
crates/s21-adapters/examples/: send_test.rs
crates/s21-adapters/src/: lib.rs  max.rs  telegram.rs  throttle.rs  types.rs  webappdata.rs
crates/s21-adapters/tests/: max_wire_tests.rs
crates/s21-core/: Cargo.toml
crates/s21-core/src/: cycle.rs  fmt.rs  lib.rs  types.rs
crates/s21-core/tests/: cycle_tests.rs
crates/s21-platform/: Cargo.toml
crates/s21-platform/examples/: live_check.rs
crates/s21-platform/src/: auth.rs  error.rs  fetch.rs  gql.rs  lib.rs  queries.rs  urls.rs
crates/s21-server/: Cargo.toml  build.rs
crates/s21-server/src/: alarm.rs  commands.rs  config.rs  crypto.rs  db.rs  lib.rs  local.rs  main.rs  poll.rs  polling.rs  sender.rs  sessions.rs  state.rs  texts.rs  watcher.rs
crates/s21-server/src/http/: api.rs  jwt.rs  mod.rs  webhooks.rs
crates/s21-server/tests/: db_tests.rs  http_tests.rs  watcher_tests.rs
deploy/: deploy.ps1  deploy.sh  env.example  local.env.example  s21notify-v3.service  s21notify.service
migrations/: 0001_init.sql
miniapp/: Cargo.toml  Trunk.toml  index.html
miniapp/src/: main.rs
s21notify/: __init__.py  bot.py  config.py  main.py  queries.py  s21api.py  watcher.py  web.py
scripts/: setup-github-project.sh
