[package]
name = "s21-miniapp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Miniapp s21notify (Leptos CSR, wasm32): регистрация и настройки"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window"] }
