[package]
name = "s21-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Клиент платформы Школы 21: Keycloak (offline-токены), GraphQL, REST context"

[dependencies]
s21-core = { path = "../s21-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
