[package]
name = "s21-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Сервер s21notify: axum, SQLite, watcher/alarm-таски"

[dependencies]
s21-core = { path = "../s21-core" }
s21-platform = { path = "../s21-platform" }
s21-adapters = { path = "../s21-adapters" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
aes-gcm = "0.10"
base64 = "0.22"
anyhow = "1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
jsonwebtoken = "9"
dashmap = "6"
rand = "0.8"
# miniapp встраивается в бинарь (самодостаточный .exe); mime-guess даёт Content-Type
rust-embed = { version = "8", features = ["mime-guess"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
http-body-util = "0.1"
async-trait = "0.1"
